--- a/mon-projet-angular/src/app/app.component.html
+++ b/mon-projet-angular/src/app/app.component.html
@@ -4,16 +4,9 @@
       <h2>Mes appareils</h2>
       <ul class="list-group">
         <app-appareil
-          [appareilName]="appareilOne"
-          [appareilStatus]="'eteint'"
-        ></app-appareil>
-        <app-appareil
-          [appareilName]="appareilTwo"
-          [appareilStatus]="'allume'"
-        ></app-appareil>
-        <app-appareil
-          [appareilName]="appareilThree"
-          [appareilStatus]="'eteint'"
+          *ngFor="let appareil of appareils"
+          [appareilName]="appareil.name"
+          [appareilStatus]="appareil.status"
         ></app-appareil>
       </ul>
       <button
