--- a/mon-projet-angular/src/app/appareil/appareil.component.html
+++ b/mon-projet-angular/src/app/appareil/appareil.component.html
@@ -1,4 +1,16 @@
-<li class="list-group-item">
-  <h4>Appareils : {{ appareilName }} -- Statut : {{ getStatus() }}</h4>
+<li
+  [ngClass]="{
+    'list-group-item': true,
+    'list-group-item-success': appareilStatus === 'allume',
+    'list-group-item-danger': appareilStatus === 'eteint'
+  }"
+>
+  <div
+    *ngIf="appareilStatus === 'eteint'"
+    style="height: 20px; width: 20px; background-color: red"
+  ></div>
+  <h4 [ngStyle]="{ color: getColor() }">
+    Appareil : {{ appareilName }} -- Statut : {{ getStatus() }}
+  </h4>
   <input type="text" class="form-control" [(ngModel)]="appareilName" />
 </li>
