--- a/mon-projet-angular/src/app/app.component.html
+++ b/mon-projet-angular/src/app/app.component.html
@@ -2,6 +2,9 @@
   <div class="row">
     <div class="col-xs-12">
       <h2>Mes appareils</h2>
+      <p>
+        Mises a jour: {{ lastUpdate | async | date : "yMMMMEEEEd" | uppercase }}
+      </p>
       <ul class="list-group">
         <app-appareil
           *ngFor="let appareil of appareils"
