--- a/mon-projet-angular/src/app/appareil/appareil.component.html
+++ b/mon-projet-angular/src/app/appareil/appareil.component.html
@@ -5,12 +5,21 @@
     'list-group-item-danger': appareilStatus === 'eteint'
   }"
 >
-  <div
-    *ngIf="appareilStatus === 'eteint'"
-    style="height: 20px; width: 20px; background-color: red"
-  ></div>
   <h4 [ngStyle]="{ color: getColor() }">
     Appareil : {{ appareilName }} -- Statut : {{ getStatus() }}
   </h4>
-  <input type="text" class="form-control" [(ngModel)]="appareilName" />
+  <button
+    class="btn btn-success"
+    (click)="onSwitchOn()"
+    [disabled]="appareilStatus === 'allume'"
+  >
+    Allumer
+  </button>
+  <button
+    class="btn btn-danger"
+    (click)="onSwitchOff()"
+    [disabled]="appareilStatus === 'eteint'"
+  >
+    Eteindre
+  </button>
 </li>
