--- a/mon-projet-angular/src/app/app.component.html
+++ b/mon-projet-angular/src/app/app.component.html
@@ -1,24 +1,15 @@
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <ul class="nav navbar-nav">
+      <li routerLinkActive="active">
+        <a routerLink="auth">Authentification</a>
+      </li>
+      <li routerLinkActive="active"><a routerLink="appareils">Appareils</a></li>
+    </ul>
+  </div>
+</nav>
 <div class="container">
   <div class="row">
-    <div class="col-xs-12">
-      <h2>Mes appareils</h2>
-      <p>
-        Mises a jour: {{ lastUpdate | async | date : "yMMMMEEEEd" | uppercase }}
-      </p>
-      <ul class="list-group">
-        <app-appareil
-          *ngFor="let appareil of appareils; let i = index"
-          [indexOfAppareil]="i"
-          [appareilName]="appareil.name"
-          [appareilStatus]="appareil.status"
-        ></app-appareil>
-      </ul>
-      <button class="btn btn-success" (click)="onAllumer()">
-        Tout Allumer
-      </button>
-      <button class="btn btn-danger" (click)="onEteindre()">
-        Tout Eteindre
-      </button>
-    </div>
+    <router-outlet></router-outlet>
   </div>
 </div>
