--- a/mon-projet-angular/src/app/app.component.html
+++ b/mon-projet-angular/src/app/app.component.html
@@ -6,6 +6,9 @@
       </li>
       <li routerLinkActive="active"><a routerLink="appareils">Appareils</a></li>
     </ul>
+    <div class="navbar-right">
+      <p>Vous etes connectes depuis {{ secondes }} secondes !</p>
+    </div>
   </div>
 </nav>
 <div class="container">
