Les Reactives Forms

--- a/mon-projet-angular/src/app/app.component.html
+++ b/mon-projet-angular/src/app/app.component.html
@@ -8,6 +8,9 @@
       <li routerLinkActive="active">
         <a routerLink="edit">Nouvel Appareil</a>
       </li>
+      <li routerLinkActive="active">
+        <a routerLink="users">Utilisateurs</a>
+      </li>
     </ul>
     <div class="navbar-right">
       <p>Vous etes connectes depuis {{ secondes }} secondes !</p>
