--- a/mon-projet-angular/src/app/appareil-view/appareil-view.component.html
+++ b/mon-projet-angular/src/app/appareil-view/appareil-view.component.html
@@ -14,4 +14,6 @@
   </ul>
   <button class="btn btn-success" (click)="onAllumer()">Tout Allumer</button>
   <button class="btn btn-danger" (click)="onEteindre()">Tout Eteindre</button>
+  <button class="btn btn-primary" (click)="onSave()">Enregistrer</button>
+  <button class="btn btn-primary" (click)="onFetch()">Charger</button>
 </div>
